--- a/kMeansConvergence/kmeans-phase1.ipynb
+++ b/kMeansConvergence/kmeans-phase1.ipynb
@@ -11,15 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 43,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
     "import math\n",
+    "import operator\n",
     "from multiprocessing import Pool,current_process,cpu_count,active_children\n",
     "from timeit import default_timer as timer\n",
     "from functools import partial"
@@ -27,16 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2.7.13 |Anaconda 4.4.0 (64-bit)| (default, Dec 20 2016, 23:09:15) \\n[GCC 4.4.7 20120313 (Red Hat 4.4.7-1)]'"
+       "'2.7.12 (default, Nov 19 2016, 06:48:10) \\n[GCC 5.4.0 20160609]'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +77,7 @@
     "    return {i:v for i,v in enumerate(l)}\n",
     "\n",
     "# Read in data\n",
-    "my_dir = os.path.expanduser(\"/home/abhishek/\")\n",
+    "my_dir = os.path.expanduser(\"./\")\n",
     "my_fname = \"N_combinedLogs_hourly.txt\"\n",
     "batch = readBoyanaFile(my_dir+my_fname) #one big batch as dictionary\n",
     "print('Total points: ' + str(len(batch)) )  # 4338\n",
@@ -87,15 +86,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-4-2aa36dec9daa>, line 9)",
+     "evalue": "expected an indented block (<ipython-input-15-5c7c3bfca707>, line 9)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-2aa36dec9daa>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    my_dir = os.path.expanduser(\"~/Dropbox/winter650_2017/homework/\")\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-5c7c3bfca707>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    my_dir = os.path.expanduser(\"~/Dropbox/winter650_2017/homework/\")\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +138,7 @@
        " 3: [22.0, 3.0, 1.0, 0.5874, 558.0]}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,10 +181,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 46,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# thought problem: do we need the sqrt? en.wikipedia.org/wiki/Euclidean_distance#Squared_Euclidean_distance\n",
@@ -198,10 +195,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 47,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Given a point tuple, find the closest center. Return its id.\n",
@@ -215,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +219,7 @@
        "1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,14 +238,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total cores available: 4\n",
+      "Total cores available: 8\n",
       "Total cores used: 4\n"
      ]
     }
@@ -278,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +281,7 @@
      "output_type": "stream",
      "text": [
       "========= Starting iteration 0\n",
-      "time of part 1: 0.0564630031586\n"
+      "time of part 1: 0.0260820388794\n"
      ]
     }
    ],
@@ -315,71 +310,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: [11.506257848472165, 5.915027208036835, 8.490581833403098, 0.004166429468396858, 1.8522394307241523], 2: [12.106736111111111, 4.895833333333333, 8.45138888888889, 0.140497619047619, 132.7123015873016], 3: [10.60104144527099, 5.207226354941551, 10.193411264612115, 0.8035047821466521, 762.230605738576]}\n"
+     ]
     }
    ],
    "source": [
-    "new_p_to_c_map[:50] #[1,1,2,3,3,3,3,3,2,2, ...]"
+    "mymap = {}\n",
+    "for i,j in zip (new_p_to_c_map, batch.values()):\n",
+    "    mymap.setdefault(i, []).append(j)\n",
+    "newCenters = {}\n",
+    "for i in mymap.keys():\n",
+    "    newCenters[i] = map(lambda x: x/len(mymap.get(i)), reduce(lambda first, second : map(operator.add, first,second), mymap.get(i)))\n",
+    "print newCenters"
    ]
   },
   {
@@ -396,13 +347,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 54,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# your functions go here\n"
+    "# your functions go here\n",
+    "def recompute_centers(clustermapping, items):\n",
+    "    mymap = {}\n",
+    "    for i,j in zip (clustermapping, items):\n",
+    "        mymap.setdefault(i, []).append(j)\n",
+    "    listsToReduce = []\n",
+    "    lengthsList = []\n",
+    "    for i in mymap.keys():\n",
+    "        listsToReduce.append(mymap.get(i))\n",
+    "        lengthsList.append(len(mymap.get(i)))\n",
+    "    reducedLists = map(reduce(lambda first, second : map(operator.add, first,second)), listsToReduce)\n",
+    "    newCenters = enumerate(map(lambda pair : pair[0] / pair[1] , zip (reducedLists, lengthsList))) \n",
+    "    return newCenters"
    ]
   },
   {
@@ -416,11 +377,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total cores available: 8\n",
+      "Total cores used: 4\n"
+     ]
+    }
+   ],
    "source": [
     "# number of workers\n",
     "processors = cpu_count()\n",
@@ -434,11 +402,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of iterations: 50\n"
+     ]
+    }
+   ],
    "source": [
     "iterations = 50\n",
     "print(\"Number of iterations: {}\".format(iterations))"
@@ -468,11 +442,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
-    "collapsed": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========= Starting iteration 0\n",
+      "time of part 1: 0.0265691280365\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "reduce expected at least 2 arguments, got 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-57-02d13c298e76>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m\"time of part 1: \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0mstart\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtimer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0mnew_C\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrecompute_centers\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_p_to_c_map\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# compute new values of centers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m     \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtimer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mstart\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-54-7abf522db3c7>\u001b[0m in \u001b[0;36mrecompute_centers\u001b[0;34m(clustermapping, items)\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mlistsToReduce\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmymap\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mlengthsList\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmymap\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mreducedLists\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreduce\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mfirst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moperator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfirst\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msecond\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlistsToReduce\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0mnewCenters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mpair\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mpair\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mpair\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mzip\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mreducedLists\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlengthsList\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnewCenters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: reduce expected at least 2 arguments, got 1"
+     ]
+    }
+   ],
    "source": [
     "# Start a pool of N workers\n",
     "pool = Pool(processes=N,\n",
@@ -482,32 +477,32 @@
     "total_time = 0\n",
     "for i in range(iterations):\n",
     "    print(\"========= Starting iteration \" + str(i))\n",
-    "\n",
-    "\n",
+    "    \n",
     "    # assign points to centers 2D\n",
     "    start = timer()\n",
-    "    partial_compute = ...\n",
-    "    new_p_to_c_map = ...\n",
+    "\n",
+    "    partial_compute = partial(compute_center, all_centers = C) #moved this inside loop b/c gets updated after each iteration\n",
+    "    new_p_to_c_map = pool.map(partial_compute, batch.items())\n",
     "\n",
     "    end = timer()\n",
     "\n",
     "    t = end - start\n",
     "    total_time += t\n",
     "    print( \"time of part 1: \" + str(t))\n",
-    "    \n",
     "    start = timer()\n",
-    "    new_C = ...  # compute new values of centers\n",
+    "    new_C = recompute_centers(new_p_to_c_map, batch.values())  # compute new values of centers\n",
     "    end = timer()\n",
     "    t = end - start\n",
     "    total_time += t\n",
     "    print( \"time of part 2: \" + str(t))\n",
     "    for tup in zip(C.values(), new_C.values()):\n",
-    "        print(tup[0])\n",
-    "        print(tup[1])\n",
-    "        print(euclidean_distance(tup[0],tup[1]))\n",
-    "        print(\"-----------\")\n",
+    "        #print(tup[0])\n",
+    "        #print(tup[1])\n",
+    "        #print(euclidean_distance(tup[0],tup[1]))\n",
+    "        changed_centers = euclidean_distance(tup[0],tup[1])\n",
+    "        #print(\"-----------\")\n",
     "    \n",
-    "    changed_centers = ...  # hoping value is 0\n",
+    "    #changed_centers = 0  # hoping value is 0\n",
     "    print('Changes: {}'.format(changed_centers))\n",
     "\n",
     "    C = new_C  # update centers with new values\n",
@@ -547,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
