--- a/kMeansConvergence/kmeans-phase1.ipynb
+++ b/kMeansConvergence/kmeans-phase1.ipynb
@@ -11,8 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
+   "execution_count": 184,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -26,16 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2.7.12 (default, Nov 19 2016, 06:48:10) \\n[GCC 5.4.0 20160609]'"
+       "'2.7.13 |Anaconda 4.4.0 (64-bit)| (default, Dec 20 2016, 23:09:15) \\n[GCC 4.4.7 20120313 (Red Hat 4.4.7-1)]'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -86,15 +88,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-15-5c7c3bfca707>, line 9)",
+     "evalue": "expected an indented block (<ipython-input-165-2aa36dec9daa>, line 9)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-5c7c3bfca707>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    my_dir = os.path.expanduser(\"~/Dropbox/winter650_2017/homework/\")\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-165-2aa36dec9daa>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    my_dir = os.path.expanduser(\"~/Dropbox/winter650_2017/homework/\")\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -127,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +140,7 @@
        " 3: [22.0, 3.0, 1.0, 0.5874, 558.0]}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,8 +183,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
+   "execution_count": 188,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# thought problem: do we need the sqrt? en.wikipedia.org/wiki/Euclidean_distance#Squared_Euclidean_distance\n",
@@ -195,8 +199,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
+   "execution_count": 189,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Given a point tuple, find the closest center. Return its id.\n",
@@ -210,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +225,7 @@
        "1"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,14 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total cores available: 8\n",
+      "Total cores available: 4\n",
       "Total cores used: 4\n"
      ]
     }
@@ -273,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +287,7 @@
      "output_type": "stream",
      "text": [
       "========= Starting iteration 0\n",
-      "time of part 1: 0.0260820388794\n"
+      "time of part 1: 0.0721490383148\n"
      ]
     }
    ],
@@ -310,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 172,
    "metadata": {
     "scrolled": true
    },
@@ -347,12 +353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
+   "execution_count": 193,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# your functions go here\n",
-    "def recompute_centers(clustermapping, items):\n",
+    "def recompute_centers(pool,clustermapping, items):\n",
     "    mymap = {}\n",
     "    for i,j in zip (clustermapping, items):\n",
     "        mymap.setdefault(i, []).append(j)\n",
@@ -361,9 +369,9 @@
     "    for i in mymap.keys():\n",
     "        listsToReduce.append(mymap.get(i))\n",
     "        lengthsList.append(len(mymap.get(i)))\n",
-    "    reducedLists = map(reduce(lambda first, second : map(operator.add, first,second)), listsToReduce)\n",
-    "    newCenters = enumerate(map(lambda pair : pair[0] / pair[1] , zip (reducedLists, lengthsList))) \n",
-    "    return newCenters"
+    "    reducedLists = [list(pool.map(sum, zip(*lst))) for lst in listsToReduce]\n",
+    "    newCenters = enumerate(map(lambda pair : map( lambda x : x / pair[1], pair[0]) , zip (reducedLists, lengthsList))) \n",
+    "    return {key:value for key,value in newCenters}"
    ]
   },
   {
@@ -377,14 +385,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total cores available: 8\n",
+      "Total cores available: 4\n",
       "Total cores used: 4\n"
      ]
     }
@@ -402,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 196,
    "metadata": {
     "collapsed": true
    },
@@ -442,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 197,
    "metadata": {
     "scrolled": false
    },
@@ -452,19 +460,32 @@
      "output_type": "stream",
      "text": [
       "========= Starting iteration 0\n",
-      "time of part 1: 0.0265691280365\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "reduce expected at least 2 arguments, got 1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-57-02d13c298e76>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m\"time of part 1: \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0mstart\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtimer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0mnew_C\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrecompute_centers\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_p_to_c_map\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# compute new values of centers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m     \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtimer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mstart\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-54-7abf522db3c7>\u001b[0m in \u001b[0;36mrecompute_centers\u001b[0;34m(clustermapping, items)\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mlistsToReduce\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmymap\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mlengthsList\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmymap\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mreducedLists\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreduce\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mfirst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moperator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfirst\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msecond\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlistsToReduce\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0mnewCenters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mpair\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mpair\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mpair\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mzip\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mreducedLists\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlengthsList\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnewCenters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: reduce expected at least 2 arguments, got 1"
+      "========= Starting iteration 1\n",
+      "========= Starting iteration 2\n",
+      "========= Starting iteration 3\n",
+      "========= Starting iteration 4\n",
+      "========= Starting iteration 5\n",
+      "========= Starting iteration 6\n",
+      "========= Starting iteration 7\n",
+      "========= Starting iteration 8\n",
+      "========= Starting iteration 9\n",
+      "========= Starting iteration 10\n",
+      "========= Starting iteration 11\n",
+      "========= Starting iteration 12\n",
+      "========= Starting iteration 13\n",
+      "========= Starting iteration 14\n",
+      "========= Starting iteration 15\n",
+      "========= Starting iteration 16\n",
+      "========= Starting iteration 17\n",
+      "========= Starting iteration 18\n",
+      "========= Starting iteration 19\n",
+      "========= Starting iteration 20\n",
+      "========= Starting iteration 21\n",
+      "========= Starting iteration 22\n",
+      "========= Starting iteration 23\n",
+      "========= Starting iteration 24\n",
+      "========= Starting iteration 25\n",
+      "Total time: 1.55639481544\n"
      ]
     }
    ],
@@ -476,7 +497,7 @@
     "\n",
     "total_time = 0\n",
     "for i in range(iterations):\n",
-    "    print(\"========= Starting iteration \" + str(i))\n",
+    "    print(\"Starting iteration \" + str(i))\n",
     "    \n",
     "    # assign points to centers 2D\n",
     "    start = timer()\n",
@@ -488,27 +509,29 @@
     "\n",
     "    t = end - start\n",
     "    total_time += t\n",
-    "    print( \"time of part 1: \" + str(t))\n",
+    "    #print( \"time of part 1: \" + str(t))\n",
     "    start = timer()\n",
-    "    new_C = recompute_centers(new_p_to_c_map, batch.values())  # compute new values of centers\n",
+    "    new_C = recompute_centers(pool,new_p_to_c_map, batch.values())  # compute new values of centers\n",
+    "    #print new_C\n",
     "    end = timer()\n",
     "    t = end - start\n",
     "    total_time += t\n",
-    "    print( \"time of part 2: \" + str(t))\n",
+    "    #print( \"time of part 2: \" + str(t))\n",
+    "    iterdiff = []\n",
     "    for tup in zip(C.values(), new_C.values()):\n",
     "        #print(tup[0])\n",
     "        #print(tup[1])\n",
-    "        #print(euclidean_distance(tup[0],tup[1]))\n",
-    "        changed_centers = euclidean_distance(tup[0],tup[1])\n",
+    "        diff = map( lambda pair : pair[0] == pair[1], zip(tup[0], tup[1]))\n",
+    "        iterdiff.append(reduce( lambda a,b : a and b, diff));\n",
     "        #print(\"-----------\")\n",
-    "    \n",
-    "    #changed_centers = 0  # hoping value is 0\n",
-    "    print('Changes: {}'.format(changed_centers))\n",
+    "    #print iterdiff\n",
+    "    unchanged_centers = reduce( lambda a,b : a and b, iterdiff)  # hoping value is 0\n",
+    "    #print('Changes: {}'.format(unchanged_centers))\n",
     "\n",
     "    C = new_C  # update centers with new values\n",
     "    p_to_c_map = new_p_to_c_map  #update map\n",
     "    \n",
-    "    if changed_centers == 0:\n",
+    "    if unchanged_centers == True:\n",
     "          break  # last iteration caused no allegiance changes\n",
     "    \n",
     "pool.close() # no more tasks\n",
@@ -542,7 +565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
