--- a/kMeansConvergence/kmeans-phase1.ipynb
+++ b/kMeansConvergence/kmeans-phase1.ipynb
@@ -11,10 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 78,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -28,16 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2.7.13 |Anaconda 4.4.0 (64-bit)| (default, Dec 20 2016, 23:09:15) \\n[GCC 4.4.7 20120313 (Red Hat 4.4.7-1)]'"
+       "'2.7.12 (default, Nov 19 2016, 06:48:10) \\n[GCC 5.4.0 20160609]'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -106,8 +104,7 @@
     "# Strip off first 2 and float others. Skip lines with ? (empties)\n",
     "def readElectricFile(fname):\n",
     "    fid = open(fname,'r')\n",
-    "    data = fid.readlines()[1:]\n",
-    "    data = filter(lambda x : \"?\" not in x, data)\n",
+    "    data = filter(lambda x : \"?\" not in x, fid.readlines()[1:])\n",
     "    l = map(lambda line : map(float, (line.rstrip().split(';'))[2:]),data)\n",
     "    return {i:v for i,v in enumerate(l)}\n",
     "\n",
@@ -132,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +140,7 @@
        " 3: [0.384, 0.188, 238.91, 1.8, 0.0, 0.0, 0.0]}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,10 +183,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 83,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# thought problem: do we need the sqrt? en.wikipedia.org/wiki/Euclidean_distance#Squared_Euclidean_distance\n",
@@ -202,10 +197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 84,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Given a point tuple, find the closest center. Return its id.\n",
@@ -219,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +221,7 @@
        "2"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,14 +240,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total cores available: 4\n",
+      "Total cores available: 8\n",
       "Total cores used: 4\n"
      ]
     }
@@ -282,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +283,7 @@
      "output_type": "stream",
      "text": [
       "========= Starting iteration 0\n",
-      "time of part 1: 31.834143877\n"
+      "time of part 1: 17.8124167919\n"
      ]
     }
    ],
@@ -319,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 88,
    "metadata": {
     "scrolled": true
    },
@@ -328,18 +321,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: [11.506257848472165, 5.915027208036835, 8.490581833403098, 0.004166429468396858, 1.8522394307241523], 2: [12.106736111111111, 4.895833333333333, 8.45138888888889, 0.140497619047619, 132.7123015873016], 3: [10.60104144527099, 5.207226354941551, 10.193411264612115, 0.8035047821466521, 762.230605738576]}\n"
+      "[[1.4497562393286823, 0.10861628842330877, 242.90729854843494, 5.940587163772711, 0.0790600397531774, 0.32897051725838006, 18.030463596780304], [2.2385820465199653, 0.14865308594118967, 238.31787271300357, 9.424162197293814, 2.7802128714112424, 2.6380279598633827, 17.76567559384335], [0.5955651322584773, 0.11622443653582878, 241.5194598456877, 2.5799906132914843, 0.6294775578411165, 0.9190515835589084, 0.41020296518397503]]\n"
      ]
     }
    ],
    "source": [
-    "mymap = {}\n",
-    "for i,j in zip (new_p_to_c_map, batch.values()):\n",
-    "    mymap.setdefault(i, []).append(j)\n",
-    "newCenters = {}\n",
-    "for i in mymap.keys():\n",
-    "    newCenters[i] = map(lambda x: x/len(mymap.get(i)), reduce(lambda first, second : map(operator.add, first,second), mymap.get(i)))\n",
-    "print newCenters"
+    "#mymap = {}\n",
+    "#for i,j in zip (new_p_to_c_map, batch.values()):\n",
+    "#    mymap.setdefault(i, []).append(j)\n",
+    "#newCenters = {}\n",
+    "#for i in mymap.keys():\n",
+    "#    newCenters[i] = map(lambda x: x/len(mymap.get(i)), reduce(lambda first, second : map(operator.add, first,second), mymap.get(i)))\n",
+    "#print newCenters\n",
+    "clusterIds = C.keys()\n",
+    "mappings = zip(new_p_to_c_map, batch.values())\n",
+    "clusters = map(lambda clusterId : map(lambda pair : pair[1] ,filter(lambda pair : pair[0] == clusterId , mappings)), clusterIds)\n",
+    "decomposed = map(lambda cluster : zip(*cluster), clusters)\n",
+    "centroids = map(lambda cluster : [sum(component) / len(component) for component in cluster] , decomposed)\n",
+    "print centroids"
    ]
   },
   {
@@ -356,21 +355,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 89,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# your functions go here\n",
-    "def recompute_centers(pool,clustermapping, items):\n",
-    "    mymap = {}\n",
-    "    for i,j in zip (new_p_to_c_map, batch.values()):\n",
-    "        mymap.setdefault(i, []).append(j)\n",
-    "    newCenters = {}\n",
-    "    for i in mymap.keys():\n",
-    "        newCenters[i] = map(lambda x: x/len(mymap.get(i)), reduce(lambda first, second : map(operator.add, first,second), mymap.get(i)))\n",
-    "    return newCenters"
+    "#def extractClusters(clusterId, xyz):\n",
+    "#    return map(lambda pair : pair[1] ,filter(lambda pair : pair[0] == clusterId , xyz))   \n",
+    "\n",
+    "#def calculateCentroids(cluster):\n",
+    "#    return [sum(component) / len(component) for component in cluster]\n",
+    "\n",
+    "#def compactCluster(cluster):\n",
+    "#    return zip(*cluster)\n",
+    "\n",
+    "#def recompute_centers(clusterIds, mapping, items):\n",
+    "#    mappings = zip(mapping, items)\n",
+    "#    partialExtractClusters = partial(extractClusters, xyz = mappings)\n",
+    "#    clusters = map(partialExtractClusters, clusterIds)\n",
+    "#    decomposed = map(compactCluster, clusters)\n",
+    "#    centroids = map(calculateCentroids, decomposed)\n",
+    "#    return {key:value for key, value in zip(clusterIds,centroids)}\n",
+    "def getCentroid(clusterId, clusters):\n",
+    "    cluster = map(lambda pair : pair[1] ,filter(lambda pair : pair[0] == clusterId , clusters))\n",
+    "    compactCluster = zip(*cluster)\n",
+    "    centroid =  [sum(component) / len(component) for component in compactCluster]\n",
+    "    return centroid\n",
+    "\n",
+    "def recomputeCenters(clusterIds, mapping, items):\n",
+    "    clusters = zip(mapping, items)\n",
+    "    partialGetCentroids = partial(getCentroid, clusters = clusters)\n",
+    "    centroids = map(partialGetCentroids, clusterIds)\n",
+    "    return {key:value for key,value in zip(clusterIds,centroids)}"
    ]
   },
   {
@@ -384,14 +399,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total cores available: 4\n",
+      "Total cores available: 8\n",
       "Total cores used: 4\n"
      ]
     }
@@ -409,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -427,15 +442,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 92,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Use this to reset before each new run\n",
     "p_to_c_map = [-1]*len(batch)  # -1 is not a center-id so changes on first iter will be maximum.\n",
     "C = initial_C  # reset C to starting center values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_centers(tuple):\n",
+    "    for pair in zip(tuple[0], tuple[1]):\n",
+    "        if(pair[0] != pair[1]):\n",
+    "            return 1\n",
+    "    return 0"
    ]
   },
   {
@@ -449,9 +475,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 94,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -486,7 +512,7 @@
       "{1: [1.8043628362955615, 0.13209383363172572, 239.81433079249427, 7.533830432561683, 0.1934380440867955, 0.5662516995502729, 17.880140947318555], 2: [3.948797722095709, 0.1956915096293244, 237.29577345206144, 16.754255539449083, 21.732646510664733, 17.24602402153655, 11.091364671774695], 3: [0.5239839634923366, 0.11419486107018675, 241.61454899245223, 2.2780032367840706, 0.057141190055031446, 0.48156277638561323, 0.4136540634827044]}\n",
       "Starting iteration 13\n",
       "{1: [1.8043628362955615, 0.13209383363172572, 239.81433079249427, 7.533830432561683, 0.1934380440867955, 0.5662516995502729, 17.880140947318555], 2: [3.948797722095709, 0.1956915096293244, 237.29577345206144, 16.754255539449083, 21.732646510664733, 17.24602402153655, 11.091364671774695], 3: [0.5239839634923366, 0.11419486107018675, 241.61454899245223, 2.2780032367840706, 0.057141190055031446, 0.48156277638561323, 0.4136540634827044]}\n",
-      "Total time: 605.105850697\n"
+      "Total time: 367.826667547\n"
      ]
     }
    ],
@@ -497,6 +523,9 @@
     "           )\n",
     "\n",
     "total_time = 0\n",
+    "centerIds = C.keys()\n",
+    "items = batch.values()\n",
+    "\n",
     "for i in range(iterations):\n",
     "    print(\"Starting iteration \" + str(i))\n",
     "    \n",
@@ -512,27 +541,20 @@
     "    total_time += t\n",
     "    #print( \"time of part 1: \" + str(t))\n",
     "    start = timer()\n",
-    "    new_C = recompute_centers(pool,new_p_to_c_map, batch.values())  # compute new values of centers\n",
+    "    new_C = recomputeCenters(centerIds,new_p_to_c_map, items)  # compute new values of centers\n",
     "    print new_C\n",
     "    end = timer()\n",
     "    t = end - start\n",
     "    total_time += t\n",
     "    #print( \"time of part 2: \" + str(t))\n",
-    "    iterdiff = []\n",
+    "    changed_centers = 0;\n",
     "    for tup in zip(C.values(), new_C.values()):\n",
-    "        #print(tup[0])\n",
-    "        #print(tup[1])\n",
-    "        diff = map( lambda pair : pair[0] == pair[1], zip(tup[0], tup[1]))\n",
-    "        iterdiff.append(reduce( lambda a,b : a and b, diff));\n",
-    "        #print(\"-----------\")\n",
-    "    #print iterdiff\n",
-    "    unchanged_centers = reduce( lambda a,b : a and b, iterdiff)  # hoping value is 0\n",
-    "    #print('Changes: {}'.format(unchanged_centers))\n",
-    "\n",
+    "        changed_centers += compare_centers(tup);\n",
+    "        \n",
     "    C = new_C  # update centers with new values\n",
     "    p_to_c_map = new_p_to_c_map  #update map\n",
     "    \n",
-    "    if unchanged_centers == True:\n",
+    "    if changed_centers == 0:\n",
     "          break  # last iteration caused no allegiance changes\n",
     "    \n",
     "pool.close() # no more tasks\n",
@@ -543,9 +565,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -566,7 +593,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
